2020-08-29  Stefan Monnier <monnier@iro.umontreal.ca>
	Use cl-defstruct to define BBDB record type.
	* lisp/bbdb-com.el: Use cl-defstruct to define BBDB record type.
	* lisp/bbdb-com.el, lisp/bbdb-com.el, lisp/bbdb-snarf.el:
	* lisp/bbdb-migrate.el: Use setf to set records.

2020-01-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-search): New keywords :invert and
	:case-fold.  Allow arbitrary functions for keyword :bool.

2020-01-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mode): Bind buffer-undo-list to t.

2020-01-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Declare functions used for insinuation.
	(bbdb-init-functions): Renamed from bbdb-init-forms.

2019-09-27  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-auto-update-init): Use
	wl-summary-redisplay-hook for wanderlust.

2019-06-08  Roland Winkler  <winkler@gnu.org>
	* bbdb-com.el (bbdb-search-read): When region is active make it
	the default string to match.

2019-03-09  Stefan Monnier <monnier@iro.umontreal.ca>
	* bbdb-com.el, bbdb.el: Fix some warnings; plus cosmetic changes

	* bbdb-com.el, bbdb.el: Use #' to quote functions.
	* bbdb-com.el (bbdb-dial): Clarify backslash escaping in regexp.
	(bbdb-mail-aliases): η-reduce.
	(bbdb-mail-aliases): Use abbrev-symbol.
	(bbdb-dial-number): Use bbdb--dial-default.

	* bbdb.el: Move variable aliases before their target's definition.
	(bbdb-merge-records-function, bbdb-dial-function):
	(bbdb-canonicalize-mail-function): Use a non-nil default.
	(bbdb--dial-default): New function.
	(bbdb-init-forms): Use functions rather than "forms".
	(bbdb-initialize): Adjust accordingly.

2018-09-06  Roland Winkler  <winkler@gnu.org>
	Fix support for Wanderlust.
	* lisp/bbdb-mua.el (bbdb-mua-mode-alist): Include mime-view-mode.
	* lisp/bbdb-wl.el (bbdb/wl-header): Use with-current-buffer.

2018-05-02  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-message-header): Use rmail-get-header.