@@ -1,3 +1,8 @@
+2020-08-29  David Maus <lists@dmaus.name>
+	Use wl sticky buffer name if necessary.
+	* lisp/bbdb-wl.el (bbdb/wl-header): Use wl sticky buffer name if
+	necessary.
+
 2020-08-29  Stefan Monnier <monnier@iro.umontreal.ca>
 	Use cl-defstruct to define BBDB record type.
 	* lisp/bbdb-com.el: Use cl-defstruct to define BBDB record type.
